--- a/package.json
+++ b/package.json
@@ -11,22 +11,14 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
-    "@svgr/webpack": "^8.1.0",
-    "@tanstack/react-query": "^5.67.3",
-    "@tanstack/react-query-devtools": "^5.67.3",
+    "@reduxjs/toolkit": "^2.6.1",
+    "@tanstack/react-query": "^5.67.2",
     "axios": "^1.8.2",
-    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "react": "^19.0.0",
-    "react-datepicker": "^8.2.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0",
-    "react-select": "^5.10.1",
-    "sass": "^1.85.1",
-    "scss": "^0.2.4",
-    "zustand": "^5.0.3"
+    "react-redux": "^9.2.0"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.5",
