--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.0",
+    "react-select": "^5.10.1",
     "sass": "^1.85.1",
     "zustand": "^5.0.3"
   },
@@ -30,6 +32,7 @@
     "@storybook/nextjs": "^8.6.4",
     "@storybook/react": "^8.6.4",
     "@storybook/test": "^8.6.4",
+    "@tailwindcss/oxide-darwin-arm64": "^4.0.13",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
