--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
     "eslint-plugin-storybook": "^0.11.4",
+    "lightningcss": "^1.29.2",
     "playwright": "^1.50.1",
     "storybook": "^8.6.4",
     "tailwindcss": "^4",
