--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "lucide-react": "^0.479.0",
     "next": "15.2.1",
     "react": "^19.0.0",
+    "react-datepicker": "^8.2.0",
     "react-dom": "^19.0.0",
+    "react-select": "^5.10.1",
     "sass": "^1.85.1",
     "scss": "^0.2.4",
     "zustand": "^5.0.3"
