--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@vitest/coverage-v8": "^3.0.7",
     "eslint": "^9",
     "eslint-config-next": "15.2.1",
+    "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-storybook": "^0.11.4",
     "playwright": "^1.50.1",
     "storybook": "^8.6.4",
