--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "^5.67.3",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.2",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.479.0",
     "next": "^15.2.2",
