--- a/package.json
+++ b/package.json
@@ -12,17 +12,22 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/oxide": "^4.0.13",
+    "@tailwindcss/oxide-win32-x64-msvc": "^4.0.13",
     "@tanstack/react-query": "^5.67.3",
+    "autoprefixer": "^10.4.21",
     "axios": "^1.8.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.479.0",
-    "next": "15.2.1",
+    "next": "^15.2.2",
+    "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-datepicker": "^8.2.0",
     "react-dom": "^19.0.0",
     "react-select": "^5.10.1",
     "sass": "^1.85.1",
     "scss": "^0.2.4",
+    "webpack": "^5.98.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
@@ -39,7 +44,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
-    "@types/react": "^19",
+    "@types/react": "^19.0.10",
     "@types/react-dom": "^19",
     "@vitest/browser": "^3.0.7",
     "@vitest/coverage-v8": "^3.0.7",
@@ -49,8 +54,8 @@
     "eslint-plugin-storybook": "^0.11.4",
     "playwright": "^1.50.1",
     "storybook": "^8.6.4",
-    "tailwindcss": "^4",
-    "typescript": "^5",
+    "tailwindcss": "^4.0.13",
+    "typescript": "^5.8.2",
     "vitest": "^3.0.7"
   },
   "eslintConfig": {
