Feat: 로그인 api, 로그인 폼 구현

--- a/.prettierrc
+++ b/.prettierrc
@@ -10,6 +10,5 @@
   "bracketSpacing": true,
   "jsxSingleQuote": true,
   "bracketSameLine": false,
-  "arrowParens": "always",
-  "parser": "typescript"
+  "arrowParens": "always"
 }
