--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "@tanstack/react-query-devtools": "^5.67.3",
     "autoprefixer": "^10.4.21",
     "axios": "^1.8.2",
+    "call-bind-apply-helpers": "^1.0.2",
     "dayjs": "^1.11.13",
+    "dunder-proto": "^1.0.1",
+    "function-bind": "^1.1.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.479.0",
     "next": "^15.2.2",
     "postcss": "^8.5.3",
-    "react": "^19.0.0",
+    "react": "^18.3.1",
     "react-datepicker": "^8.2.0",
-    "react-dom": "^19.0.0",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-query": "^3.39.3",
     "react-select": "^5.10.1",
