--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "globalnomad",
   "version": "0.1.0",
@@ -32,6 +31,7 @@
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-modal": "^3.16.3",
     "react-select": "^5.10.1",
     "sass": "^1.85.1",
     "scss": "^0.2.4",
@@ -54,6 +54,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-modal": "^3.16.3",
     "@vitest/browser": "^3.0.7",
     "@vitest/coverage-v8": "^3.0.7",
     "autoprefixer": "^10.4.21",
