--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-modal": "^3.16.3",
     "@types/react-slick": "^0.23.13",
     "@vitest/browser": "^3.0.7",
     "@vitest/coverage-v8": "^3.0.7",
