--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "globalnomad",
   "version": "0.1.0",
@@ -64,6 +63,7 @@
     "eslint-config-next": "15.2.1",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-storybook": "^0.11.4",
+    "msw": "^2.7.3",
     "playwright": "^1.50.1",
     "postcss": "^8.5.3",
     "storybook": "^8.6.4",
