--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "js-cookie": "^3.0.5",
     "lightningcss": "^1.29.3",
     "lucide-react": "^0.479.0",
+    "mocks": "^0.0.15",
     "moment": "^2.30.1",
+    "msw-storybook-addon": "^2.0.4",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
