--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "globalnomad",
   "version": "0.1.0",
@@ -22,7 +21,9 @@
     "js-cookie": "^3.0.5",
     "lightningcss": "^1.29.3",
     "lucide-react": "^0.479.0",
+    "mocks": "^0.0.15",
     "moment": "^2.30.1",
+    "msw-storybook-addon": "^2.0.4",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
@@ -64,6 +65,7 @@
     "eslint-config-next": "15.2.1",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-storybook": "^0.11.4",
+    "msw": "^2.7.3",
     "playwright": "^1.50.1",
     "postcss": "^8.5.3",
     "storybook": "^8.6.4",
