--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
     "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/node": "^4.1.3",
     "@tanstack/react-query": "^5.67.3",
     "@tanstack/react-query-devtools": "^5.69.0",
+    "asynckit": "^0.4.0",
     "axios": "^1.8.2",
+    "combined-stream": "^1.0.8",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.5.0",
     "js-cookie": "^3.0.5",
@@ -53,14 +56,12 @@
     "@storybook/nextjs": "^8.6.4",
     "@storybook/react": "^8.6.4",
     "@storybook/test": "^8.6.4",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.3",
     "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-
     "@types/react-modal": "^3.16.3",
-
     "@types/react-slick": "^0.23.13",
     "@vitest/browser": "^3.0.7",
     "@vitest/coverage-v8": "^3.0.7",
